--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dcb8df30",
+   "id": "2c31cb8a",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1423e4ac",
+   "id": "65d0f362",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c5a6f25",
+   "id": "c9bf273a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b45b9c80",
+   "id": "eff9da3b",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d60f94ad",
+   "id": "f474a04e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97ba8796",
+   "id": "37244522",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbdc14fc",
+   "id": "61c9a4e3",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69acb467",
+   "id": "b95934ac",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a83d0e08",
+   "id": "1fa61f1d",
    "metadata": {},
    "source": [
     "## Example 1: marginal distributions\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cff4acd",
+   "id": "42571b66",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e1cf18",
+   "id": "4b35bbf3",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94859aee",
+   "id": "adadc3e0",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115ba0a0",
+   "id": "d0009c42",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83869d2d",
+   "id": "a61878cd",
    "metadata": {},
    "source": [
     "Note that we did not JIT-compile the outer loop, since\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "533f851e",
+   "id": "6a241826",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e69a8a6",
+   "id": "18853d4e",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b81478a",
+   "id": "94abb896",
    "metadata": {},
    "source": [
     "The benefit of the `lax.scan` implementation is that we compile the whole\n",
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17808976",
+   "id": "73db1a48",
    "metadata": {
     "hide-output": false
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7e98525",
+   "id": "826c5bbd",
    "metadata": {},
    "source": [
     "Notice that by $ t=500 $ or $ t=750 $ the densities are barely\n",
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83926754",
+   "id": "c4b16de9",
    "metadata": {
     "hide-output": false
    },
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3d1eb7c",
+   "id": "303d63f6",
    "metadata": {},
    "source": [
     "## Example 2: restock frequency\n",
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57c3d58f",
+   "id": "2a7ba345",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f1bae8a",
+   "id": "3222109d",
    "metadata": {
     "hide-output": false
    },
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a4c83b",
+   "id": "5c08b393",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.fori_loop`\n",
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "586e5268",
+   "id": "35c817dc",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b245f664",
+   "id": "c2546385",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c42a1a48",
+   "id": "8a7847a3",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   }
  ],
  "metadata": {
-  "date": 1709542797.0830681,
+  "date": 1709695940.078198,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
