--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3b22fdf0",
+   "id": "10c43458",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "655a4772",
+   "id": "24d4dc6b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49a1bf4b",
+   "id": "892a5616",
    "metadata": {
     "hide-output": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12e5c4c",
+   "id": "3961bcfb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e81005c8",
+   "id": "467649b1",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd542e4a",
+   "id": "5f05c25e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "734d70d7",
+   "id": "b78aca29",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4705ad96",
+   "id": "fe27b827",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30392376",
+   "id": "683ebdcd",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5537fe",
+   "id": "03980bfc",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ebf6a6",
+   "id": "b8593a0b",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3380b52f",
+   "id": "7af8fb49",
    "metadata": {
     "hide-output": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc0beb7c",
+   "id": "f937a8b3",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c46353f3",
+   "id": "30eba178",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa17f86",
+   "id": "03171fcf",
    "metadata": {},
    "source": [
     "Running the above function again so we can see the speed with and without compile time."
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea9b4ab5",
+   "id": "48ce15fd",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6253242f",
+   "id": "76d4bc2d",
    "metadata": {},
    "source": [
     "Notice that we do not JIT-compile the `for` loops, since\n",
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a98b4dc8",
+   "id": "5cb1c50e",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f1bc21",
+   "id": "bf6ceece",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a2a206b",
+   "id": "c2e2ce14",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b92da741",
+   "id": "76889089",
    "metadata": {
     "hide-output": false
    },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e12d583",
+   "id": "21df9efd",
    "metadata": {},
    "source": [
     "In this case, `M` is small enough for the code to run and\n",
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ff3d08b",
+   "id": "a2e486f7",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df10057",
+   "id": "606eb669",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06662472",
+   "id": "e442edce",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c7aa18c",
+   "id": "00bfb7ac",
    "metadata": {},
    "source": [
     "Let’s rerun the `for` loop version on smaller `M` to compare the speed"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecb01176",
+   "id": "37d2dba6",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bb73ed5",
+   "id": "bae3ee46",
    "metadata": {},
    "source": [
     "We see that the `lax.fori_loop` version is faster than the `for` loop version\n",
@@ -523,7 +523,7 @@
   }
  ],
  "metadata": {
-  "date": 1709542797.191819,
+  "date": 1709695940.1904194,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
