--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c596b623",
+   "id": "cf44dbe7",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddb85109",
+   "id": "97b26dbc",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99b1112",
+   "id": "40a62db2",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f559f61",
+   "id": "5352eb5a",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d793edd",
+   "id": "bb847b35",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb62aeb0",
+   "id": "f18f8d8c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc8a943",
+   "id": "744cf5ff",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6972820",
+   "id": "fa8f2951",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cd90430",
+   "id": "70a6b84b",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18a16ef7",
+   "id": "8b9b55e7",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5267c17",
+   "id": "aba78130",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a9fb578",
+   "id": "fb05aeba",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28eba7d5",
+   "id": "cc937000",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7abf75e1",
+   "id": "fe26b3c7",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2487aa9f",
+   "id": "81ea277e",
    "metadata": {
     "hide-output": false
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a8c553c",
+   "id": "3e5990ed",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bddf4e5b",
+   "id": "f3d379c1",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e9ad84b",
+   "id": "cc106473",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "602dc42d",
+   "id": "836ce3e7",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6dd1eb",
+   "id": "5ba715a8",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0068f158",
+   "id": "c8612fb2",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a90e033",
+   "id": "8b5a6689",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6379a972",
+   "id": "d0b0820f",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8369de99",
+   "id": "abb21fc1",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68f30152",
+   "id": "8f1ab3c5",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d463c645",
+   "id": "308b7aa7",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b738faed",
+   "id": "5c0a9898",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4296bf20",
+   "id": "31e8e48a",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d1c8c7f",
+   "id": "1986c06a",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6094e6c1",
+   "id": "a87fd1d9",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c0db1f8",
+   "id": "1ee330c0",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb070cb",
+   "id": "a0fd39aa",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e53b095",
+   "id": "731a1e9f",
    "metadata": {
     "hide-output": false
    },
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f8bdcc3",
+   "id": "2d79050c",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7ff4b6b",
+   "id": "07f3d5f4",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66a949bb",
+   "id": "a6c07170",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a4a93c",
+   "id": "8b56e80d",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b213d89a",
+   "id": "ce7ed309",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6239ae26",
+   "id": "0dcc75d1",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fc3bc89",
+   "id": "d8ba4d6a",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77965bc9",
+   "id": "0d5f4d14",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "795833ac",
+   "id": "46c66058",
    "metadata": {
     "hide-output": false
    },
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2cfcc46",
+   "id": "a636d76a",
    "metadata": {
     "hide-output": false
    },
@@ -778,7 +778,7 @@
   }
  ],
  "metadata": {
-  "date": 1709542797.468891,
+  "date": 1709695940.4890225,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
