--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "201f549e",
+   "id": "a7cb7243",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17b9a7d3",
+   "id": "e27bf7a2",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64342ffe",
+   "id": "21a3ceec",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dccb046f",
+   "id": "558db4d9",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e741a86",
+   "id": "e218acca",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5e2914",
+   "id": "255598c8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57c31b88",
+   "id": "938d822c",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0744f3b5",
+   "id": "747ad352",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15f9ddf6",
+   "id": "04c43748",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43a61c1f",
+   "id": "9096d261",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a97b8f40",
+   "id": "e2bf5451",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65e42533",
+   "id": "71eefbff",
    "metadata": {
     "hide-output": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8cf7ca5",
+   "id": "ba9e1a45",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6038cb08",
+   "id": "bdd49f29",
    "metadata": {
     "hide-output": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d932e9",
+   "id": "256e46e2",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "901daf92",
+   "id": "cf9d6da1",
    "metadata": {
     "hide-output": false
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b0dc10",
+   "id": "e03726c4",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $"
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1feded15",
+   "id": "2d708b87",
    "metadata": {
     "hide-output": false
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c83b897",
+   "id": "b0c9e79b",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57e8fddf",
+   "id": "576777a4",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e381c78",
+   "id": "f6425c46",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b829b07",
+   "id": "e1263560",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da7a5524",
+   "id": "eafabd6b",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8349abbd",
+   "id": "5302165a",
    "metadata": {
     "hide-output": false
    },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1932f5a4",
+   "id": "b6002e5c",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34431760",
+   "id": "c0f852f3",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fad788f7",
+   "id": "18b3854f",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7551804c",
+   "id": "b97d5d50",
    "metadata": {
     "hide-output": false
    },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b5fa74e",
+   "id": "5cc37936",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e2296f1",
+   "id": "fe14d4d6",
    "metadata": {
     "hide-output": false
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf4ca372",
+   "id": "2f174367",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ec4a09",
+   "id": "e5109198",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "831126c2",
+   "id": "d9faa411",
    "metadata": {
     "hide-output": false
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "968d4cc4",
+   "id": "0f52357f",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da1e13e7",
+   "id": "0ef5e5df",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fecb5f4",
+   "id": "4bdd44df",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a73ed6df",
+   "id": "1739de00",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "835f9efb",
+   "id": "69376739",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29cf251e",
+   "id": "6844782b",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9657913",
+   "id": "7258c975",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97f59b19",
+   "id": "75678290",
    "metadata": {
     "hide-output": false
    },
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e371536",
+   "id": "bc8a40f3",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd69599",
+   "id": "f3a19cb8",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54d784b0",
+   "id": "ae7eb194",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd5d4b8",
+   "id": "e8f9e416",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   }
  ],
  "metadata": {
-  "date": 1709542797.497577,
+  "date": 1709695940.5204628,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
