--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c5f80f2e",
+   "id": "2d40c9d1",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82a8cb3c",
+   "id": "d6bec4ba",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1f1477",
+   "id": "56453358",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61f298a7",
+   "id": "eedd666c",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfff7287",
+   "id": "054f3bd1",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9974d015",
+   "id": "b497aedc",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b5fd5a",
+   "id": "90f4342b",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9e6aee1",
+   "id": "b793be37",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ee9b68f",
+   "id": "e5023773",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100433d1",
+   "id": "16b9f22e",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "814e11c2",
+   "id": "57ebf137",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d09e58",
+   "id": "462e7555",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d6b09d",
+   "id": "4b783522",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ee013a6",
+   "id": "c7cb762e",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bc7de8e",
+   "id": "98585165",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe91249",
+   "id": "9df0321f",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78947a18",
+   "id": "5377d670",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48947736",
+   "id": "024f11bf",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb49ce3",
+   "id": "06d93630",
    "metadata": {
     "hide-output": false
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "861aa5ef",
+   "id": "a39944e5",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22d9e82a",
+   "id": "49bfb726",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00ab9336",
+   "id": "3e2020c5",
    "metadata": {},
    "source": [
     "## Exercise 9.1\n",
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ac5cc17",
+   "id": "1df7d789",
    "metadata": {
     "hide-output": false
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f71f6862",
+   "id": "2cb81d84",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 9.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5519ee1",
+   "id": "4db320f7",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e17ae0d",
+   "id": "13b5c828",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d352970",
+   "id": "f5e6b0a3",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82222ae0",
+   "id": "7604749f",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49c121bd",
+   "id": "bf62241c",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63653852",
+   "id": "f1e84631",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2777ce9c",
+   "id": "d6dd5c1d",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4256d87",
+   "id": "df047533",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c91725a0",
+   "id": "72f91864",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb752bbc",
+   "id": "2dc68ce7",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a65f201",
+   "id": "2c64e9b3",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ebde85",
+   "id": "e1d6878b",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a4211b",
+   "id": "e35bf785",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   }
  ],
  "metadata": {
-  "date": 1709542797.524374,
+  "date": 1709695940.5478055,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
